# django-daylessdate

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
djangodaylessdate/: __init__.py  apps.py  filters.py  forms.py  helpers.py  models.py
djangodaylessdate/templates/djangodaylessdate/: daylessdate_filter.html
